# GPSDRPP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  gpsdrpp.desktop  make_debian_package.sh  postinst  sdrpp_module.cmake
core/: CMakeLists.txt
core/backends/glfw/: backend.cpp
core/backends/glfw/imgui/: imgui_impl_glfw.cpp
core/libcorrect/include/: correct.h
core/src/: backend.h  command_args.cpp  core.cpp  core.h  dev_refresh_worker.cpp  dev_refresh_worker.h  encoder.cpp  encoder.h  gps.cpp  gps.h  json.hpp  module.cpp  module.h  si5351.cpp  si5351.h  up_converter.cpp  up_converter.h  version.h
core/src/gui/: file_dialogs.h  gui.cpp  gui.h  icons.cpp  icons.h  main_window.cpp  main_window.h  style.cpp  style.h
core/src/gui/dialogs/: credits.cpp  credits.h  loading_screen.cpp
core/src/gui/menus/: source.cpp
core/src/gui/widgets/: clk_out_page.cpp  clk_out_page.h  frequency_select.cpp  func_select.cpp  func_select.h  gps_page.cpp  gps_page.h  loading_animation.cpp  loading_animation.h  main_view.cpp  main_view.h  map_view.cpp  map_view.h  mode_s_page.cpp  mode_s_page.h  radio_page.cpp  radio_page.h  range_slider.cpp  range_slider.h  side_bar.cpp  side_bar.h  snr_meter.cpp  waterfall.cpp  waterfall.h  waterfall_view.cpp  waterfall_view.h
core/src/imgui/: imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  stb_image.h
core/src/signal_path/: sink.cpp  sink.h  source.cpp  source.h  vfo_manager.cpp  vfo_manager.h
core/src/utils/: net.cpp  net.h  networking.cpp  networking.h
decoder_modules/mode_s_decoder/: CMakeLists.txt
decoder_modules/mode_s_decoder/src/: main.cpp  mode_s_decoder.c  mode_s_decoder.h  mode_s_decoder_interface.h  mode_s_dsp.h
root/res/themes/: uugear.json
source_modules/rtl_sdr_source/src/: main.cpp  rtl_sdr_source_interface.h
src/: main.cpp
